Bug 259292 - kspread:msoffice2003:Lines and markers in the radar chart are not displaying clearly
Summary: kspread:msoffice2003:Lines and markers in the radar chart are not displaying ...
Status: VERIFIED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: filter/xls (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Ariya Hidayat
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-09 08:58 UTC by swathi
Modified: 2011-12-07 11:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data (14.00 KB, application/octet-stream)
2010-12-09 08:58 UTC, swathi
Details
Screenshot in MS Office (123.66 KB, image/x-png)
2010-12-09 09:00 UTC, swathi
Details
Screenshot in Kword (160.11 KB, image/png)
2010-12-09 09:03 UTC, swathi
Details
Line chart with markers test data (14.50 KB, application/octet-stream)
2010-12-09 09:13 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2010-12-09 08:58:56 UTC
Created attachment 54333 [details]
Test data

Version:           svn (Rev: Essen revision 1204488) (using KDE 4.4.3) 
OS:                Kubuntu 10.04

Attached test data is in MS Excel 2003 format.It has radar chart with lines and markers in it.
When I opened the same document in Kspread, Radar chart is displaying.
But the lines and markers in the chart are not displaying clearly.

Expected outcome:
Radar chart should be displayed clearly  with the lines and markers .
Comment 1 swathi 2010-12-09 09:00:17 UTC
Created attachment 54334 [details]
Screenshot in MS Office
Comment 2 swathi 2010-12-09 09:03:11 UTC
Created attachment 54335 [details]
Screenshot in Kword
Comment 3 swathi 2010-12-09 09:13:42 UTC
Created attachment 54336 [details]
 Line chart with markers test data

In the attached test data also,markers in the line chart are not displaying clearly.
Comment 4 Sebastian Sauer 2011-12-01 10:56:39 UTC
Finally fixed the last issue (the wrong background-color) with commit 88d708ed951831f2d7cf-
Comment 5 swathi 2011-12-07 11:44:35 UTC
Verified in eb82fab9a76582b318902667665df3d8c61a95b6 .