Fix chart vs plotArea background-color.

Before we did not proper evaluate the plotArea background-color and
opacity in 2000/2003/2007 charts and where ending in lot of cases
with the wrong plotArea background-color for that reason.

BUG:259292