filters/tables/xlsx/ChartExport.cpp
@@ -159,55 +159,45 @@ QString ChartExport::generateGradientStyle ( KoGenStyles& mainStyles, const Char
 
 QString ChartExport::genChartAreaStyle(const int styleID, KoGenStyle& style, KoGenStyles& styles, KoGenStyles& mainStyles )
 {
-    if( chart()->m_areaFormat && chart()->m_areaFormat->m_fill )
-    {
-        style.addProperty( "draw:fill", "solid", KoGenStyle::GraphicType );
-        style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
-    }
-    else if ( chart()->m_fillGradient )
-    {
+    if ( chart()->m_fillGradient ) {
         style.addProperty( "draw:fill", "gradient", KoGenStyle::GraphicType );
         style.addProperty( "draw:fill-gradient-name", generateGradientStyle( mainStyles, chart()->m_fillGradient ), KoGenStyle::GraphicType );
-    }
-    else if ( m_theme )
-    {        
-        const MSOOXML::DrawingMLColorScheme& colorScheme = m_theme->colorScheme;
-        style.addProperty( "draw:fill", "solid" );
-        switch( styleID )
-        {
-            case( 33 ):              
-            case( 34 ):
-            case( 35 ):
-            case( 36 ):
-            case( 37 ):
-            case( 38 ):
-            case( 39 ):
-            case( 40 ):
-            {
-                style.addProperty( "draw:fill-color", colorScheme.value( "lt1" )->value().name(), KoGenStyle::GraphicType );
-            }            
-            break;            
-            case( 41 ):
-            case( 42 ):
-            case( 43 ):
-            case( 44 ):
-            case( 45 ):
-            case( 46 ):
-            case( 47 ):
-            case( 48 ):
-            {
-                style.addProperty( "draw:fill-color", colorScheme.value( "dk1" )->value().name(), KoGenStyle::GraphicType );
-            }            
-            break;
-            default:
-              style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
-        }
-        //style.addProperty();
-    }
-    else
-    {        
+    } else {
         style.addProperty( "draw:fill", "solid", KoGenStyle::GraphicType );
-        style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
+        bool useTheme = !chart()->m_areaFormat && m_theme;
+        if ( useTheme ) {
+            const MSOOXML::DrawingMLColorScheme& colorScheme = m_theme->colorScheme;
+            switch( styleID ) {
+                case( 33 ):
+                case( 34 ):
+                case( 35 ):
+                case( 36 ):
+                case( 37 ):
+                case( 38 ):
+                case( 39 ):
+                case( 40 ): {
+                    style.addProperty( "draw:fill-color", colorScheme.value( "lt1" )->value().name(), KoGenStyle::GraphicType );
+                } break;
+                case( 41 ):
+                case( 42 ):
+                case( 43 ):
+                case( 44 ):
+                case( 45 ):
+                case( 46 ):
+                case( 47 ):
+                case( 48 ): {
+                    style.addProperty( "draw:fill-color", colorScheme.value( "dk1" )->value().name(), KoGenStyle::GraphicType );
+                } break;
+                default: {
+                    useTheme = false;
+                } break;
+            }
+        }
+        if ( !useTheme ) {
+            style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
+            if ( chart()->m_areaFormat && chart()->m_areaFormat->m_foreground.alpha() < 255 )
+                style.addProperty( "draw:opacity", QString( "%1\%" ).arg( chart()->m_areaFormat->m_foreground.alphaF() * 100.0 ), KoGenStyle::GraphicType );
+        }
     }
     return styles.insert( style, "ch" );
 }
@@ -222,81 +212,49 @@ QString ChartExport::genChartAreaStyle( const int styleID, KoGenStyles& styles, 
 
 QString ChartExport::genPlotAreaStyle( const int styleID, KoGenStyle& style, KoGenStyles& styles, KoGenStyles& mainStyles )
 {
-    if( chart()->m_plotAreaFillColor.isValid() )
-    {
-        style.addProperty( "draw:fill", "solid", KoGenStyle::GraphicType );
-        style.addProperty( "draw:fill-color", chart()->m_plotAreaFillColor.name(), KoGenStyle::GraphicType );
-        if ( chart()->m_plotAreaFillColor.alpha() < 255 )
-        {
-            style.addProperty( "draw:opacity", QString( "%1\%" ).arg( chart()->m_plotAreaFillColor.alphaF() * 100.0 ), KoGenStyle::GraphicType );
-        }
-    } 
-    else if ( chart()->m_plotAreaFillGradient )
-    {
+    Charting::AreaFormat *areaFormat = ( chart()->m_plotArea && chart()->m_plotArea->m_areaFormat ) ? chart()->m_plotArea->m_areaFormat : chart()->m_areaFormat;
+    if ( chart()->m_plotAreaFillGradient ) {
         style.addProperty( "draw:fill", "gradient", KoGenStyle::GraphicType );
         style.addProperty( "draw:fill-gradient-name", generateGradientStyle( mainStyles, chart()->m_plotAreaFillGradient ), KoGenStyle::GraphicType );
-    }
-    else if ( m_theme )
-    {        
-        const MSOOXML::DrawingMLColorScheme& colorScheme = m_theme->colorScheme;
+    } else {
         style.addProperty( "draw:fill", "solid", KoGenStyle::GraphicType );
-        switch( styleID )
-        {
-            case( 33 ):              
-            case( 34 ):
-            {
-                style.addProperty( "draw:fill-color", tintColor( colorScheme.value( "dk1" )->value(), 0.2 ).name(), KoGenStyle::GraphicType );
-            }
-            break;
-            case( 35 ):
-            case( 36 ):
-            case( 37 ):
-            case( 38 ):
-            case( 39 ):
-            case( 40 ):
-            {
-                QString prop = QString::fromLatin1( "accent%1" ).arg( styleID - 34 );
-                style.addProperty( "draw:fill-color", colorScheme.value( "dk1" )->value().name(), KoGenStyle::GraphicType );
-            }            
-            break;            
-            case( 41 ):
-            case( 42 ):
-            case( 43 ):
-            case( 44 ):
-            case( 45 ):
-            case( 46 ):
-            case( 47 ):
-            case( 48 ):
-            {
-                style.addProperty( "draw:fill-color", tintColor( colorScheme.value( "dk1" )->value(), 0.95 ).name(), KoGenStyle::GraphicType );
-            }            
-            break;
-            default:
-            {
-                if ( paletteSet )
-                {
-                    style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#C0C0C0", KoGenStyle::GraphicType );
-                }
-                else
-                {
-                    style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
-                }
+        bool useTheme = !areaFormat && m_theme;
+        if ( useTheme ) {
+            const MSOOXML::DrawingMLColorScheme& colorScheme = m_theme->colorScheme;
+            switch( styleID ) {
+                case( 33 ):
+                case( 34 ): {
+                    style.addProperty( "draw:fill-color", tintColor( colorScheme.value( "dk1" )->value(), 0.2 ).name(), KoGenStyle::GraphicType );
+                } break;
+                case( 35 ):
+                case( 36 ):
+                case( 37 ):
+                case( 38 ):
+                case( 39 ):
+                case( 40 ): {
+                    QString prop = QString::fromLatin1( "accent%1" ).arg( styleID - 34 );
+                    style.addProperty( "draw:fill-color", colorScheme.value( "dk1" )->value().name(), KoGenStyle::GraphicType );
+                } break;
+                case( 41 ):
+                case( 42 ):
+                case( 43 ):
+                case( 44 ):
+                case( 45 ):
+                case( 46 ):
+                case( 47 ):
+                case( 48 ): {
+                    style.addProperty( "draw:fill-color", tintColor( colorScheme.value( "dk1" )->value(), 0.95 ).name(), KoGenStyle::GraphicType );
+                } break;
+                default: {
+                    useTheme = false;
+                } break;
             }
         }
-    }
-    else
-    {        
-        style.addProperty( "draw:fill", "solid", KoGenStyle::GraphicType );
-        if ( paletteSet )
-        {
-            style.addProperty( "draw:fill-color", "#C0C0C0", KoGenStyle::GraphicType );
-            Q_ASSERT( style.property( "draw:fill-color", KoGenStyle::GraphicType ) == "#C0C0C0" );
+        if ( !useTheme ) {
+            style.addProperty( "draw:fill-color", areaFormat ? areaFormat->m_foreground.name() : (paletteSet ? "#C0C0C0" : "#FFFFFF"), KoGenStyle::GraphicType );
+            if ( areaFormat && areaFormat->m_foreground.alpha() < 255 )
+                style.addProperty( "draw:opacity", QString( "%1\%" ).arg( areaFormat->m_foreground.alphaF() * 100.0 ), KoGenStyle::GraphicType );
         }
-        else
-        {
-            style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
-        }
-        //style.addProperty( "draw:fill-color", chart()->m_areaFormat ? chart()->m_areaFormat->m_foreground.name() : "#FFFFFF", KoGenStyle::GraphicType );
     }
     return styles.insert( style, "ch" );
 }
